--- a/src/app/components/header-login/header-login.component.css
+++ b/src/app/components/header-login/header-login.component.css
@@ -11,3 +11,9 @@
   height: 50px;
   width: 50px;
 }
+
+#button_header {
+  font-family: "Chewy", Arial,Helvetica, sans-serif;
+  background: #F73C3B;
+  color: white;
+}
