--- a/src/app/components/header-login/header-login.component.html
+++ b/src/app/components/header-login/header-login.component.html
@@ -1,4 +1,4 @@
 <span id="header_content">
   <img id="image_logo" src="assets/logo_seul.png">
-  <button mat-raised-button color="primary">S'inscrire</button>
+  <button id="button_header" mat-raised-button color="primary">S'inscrire</button>
 </span>
