--- a/src/app/components/subscribe/subscribe.component.html
+++ b/src/app/components/subscribe/subscribe.component.html
@@ -1,1 +1,59 @@
-<p>subscribe works!</p>
+<app-header-login></app-header-login>
+<span id="subscribe_content">
+    <h1>S'inscrire pour commencer</h1>
+    <h3>Entrez vos détails en dessous</h3>
+    <form id="form-subscribe" [formGroup]="subscribeForm" (ngSubmit)="postSubscribeForm()">
+
+      <span class="input_double_form">
+          <mat-form-field class="example-form-field">
+            <mat-label>Nom</mat-label>
+            <input matInput type="text" name="name" id="name" formControlName="name" required>
+            <mat-icon class="input_icon" matSuffix>person_outline</mat-icon>
+          </mat-form-field>
+
+          <mat-form-field class="example-form-field">
+            <mat-label>Prénom</mat-label>
+            <input matInput type="text" name="surname" id="surname" formControlName="surname" required>
+            <mat-icon class="input_icon" matSuffix>person_outline</mat-icon>
+          </mat-form-field>
+      </span>
+
+      <span class="input_double_form">
+          <mat-form-field class="example-form-field">
+            <mat-label>email</mat-label>
+            <input matInput type="text" name="email" id="email" formControlName="email" required>
+            <mat-icon class="input_icon" matSuffix>mail</mat-icon>
+          </mat-form-field>
+
+          <mat-form-field class="example-form-field">
+            <mat-label>Pseudo</mat-label>
+            <input matInput type="text" name="username" id="username" formControlName="username" required>
+            <mat-icon class="input_icon" matSuffix>person_outline</mat-icon>
+          </mat-form-field>
+      </span>
+
+      <h3>Votre mot de passe</h3>
+
+      <span class="input_double_form">
+          <mat-form-field class="example-form-field">
+            <mat-label>Mot de passe</mat-label>
+            <input matInput [type]="hidePasswordVisibility ? 'password': 'text'" name="password" id="password" formControlName="password" required>
+            <mat-icon class="input_icon password_icon" (click)="hidePasswordVisibility = !hidePasswordVisibility" matSuffix>{{hidePasswordVisibility ? 'visibility_off': 'visibility'}}</mat-icon>
+          </mat-form-field>
+
+          <mat-form-field class="example-form-field">
+            <mat-label>Retaper mot de passe</mat-label>
+            <input matInput [type]="hidePasswordConfirmationVisibility ? 'password': 'text'" name="confirmation_password" id="confirmation_password" formControlName="password" required>
+            <mat-icon class="input_icon password_icon" (click)="hidePasswordConfirmationVisibility = !hidePasswordConfirmationVisibility" matSuffix>{{hidePasswordConfirmationVisibility ? 'visibility_off': 'visibility'}}</mat-icon>
+          </mat-form-field>
+      </span>
+
+      <span id="button-validation">
+          <button id="button_connect" [ngClass]="{'button_connect_active': !subscribeForm.invalid && !buttonIsInValidAfterClick}" mat-raised-button [disabled]="subscribeForm.invalid || buttonIsInValidAfterClick">S'inscrire</button>
+      </span>
+
+    </form>
+  <span id="big_logo_content">
+      <img id="big_logo" src="assets/mindory_big.png">
+  </span>
+</span>
