add forget page design

--- a/src/app/components/forget-password/forget-password.component.css
+++ b/src/app/components/forget-password/forget-password.component.css
@@ -1,4 +1,4 @@
-#login_content {
+#forget_content {
   height: 70%;
   display: flex;
   justify-content: center;
@@ -9,36 +9,22 @@
   font-family: "Chewy", Arial,Helvetica, sans-serif;
 }
 
-#form-disponibility {
+#form-forget {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-#inputs_form {
-  margin-top: 15%;
-  margin-bottom: 15%;
-  width: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
+
+#form-forget mat-form-field {
+  margin-top: 10%;
+  margin-bottom: 10%;
 }
 
-#inputs_form mat-form-field {
-  margin-right: 10%;
-  margin-left: 10%;
-}
-
-#inputs_form mat-form-field mat-label{
+#form-forget mat-form-field mat-label{
 
   font-family: "Chewy", Arial,Helvetica, sans-serif;
-}
-
-#password_icon {
-  color: grey;
-  cursor: pointer;
 }
 
 #mail_icon {
@@ -61,7 +47,7 @@
   height: 100%;
 }
 
-#button_connect {
+#button_forget {
   font-family: "Chewy", Arial,Helvetica, sans-serif;
 }
 
@@ -69,8 +55,6 @@
   background: #F73C3B;
   color: white;
 }
-
-
 
 @media screen and (max-width: 450px) {
 
