--- a/src/app/components/header-login/header-login.component.css
+++ b/src/app/components/header-login/header-login.component.css
@@ -17,3 +17,11 @@
   background: #F73C3B;
   color: white;
 }
+
+@media screen and (max-width: 400px) {
+
+  #header_content {
+    width: 100%;
+  }
+
+}
