--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -70,6 +70,28 @@
   color: white;
 }
 
+#link_forget_password {
+  color: #F73C3B;
+  text-decoration: none;
+}
+
+#forget_line {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+#forget_line a,h3{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+#forget_line a {
+  cursor: pointer;
+}
+
 
 
 @media screen and (max-width: 450px) {
