add modification to forget-password component

--- a/src/app/components/forget-password/forget-password.component.html
+++ b/src/app/components/forget-password/forget-password.component.html
@@ -1,7 +1,7 @@
 <app-header-login></app-header-login>
 <span id="forget_content">
     <h1>Mot de passe oubliée</h1>
-    <h3>renseignez l'email associé à votre compte sauf pour recevoir le mail de réinitialisation</h3>
+    <h3>renseignez l'email associé à votre compte pour recevoir le mail de réinitialisation</h3>
     <form id="form-forget" [formGroup]="forgetForm" (ngSubmit)="postForgetForm()">
 
       <mat-form-field class="example-form-field">
