add home pictures

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -27,7 +27,7 @@
 
     </form>
   <span id="big_logo_content">
-      <img id="big_logo" src="assets/mindory_big.png">
+      <img id="big_logo" src="../../../assets/images/mindory_big.png">
   </span>
 </span>
 
