--- a/src/app/components/forget-password/forget-password.component.html
+++ b/src/app/components/forget-password/forget-password.component.html
@@ -16,6 +16,6 @@
 
     </form>
   <span id="big_logo_content">
-      <img id="big_logo" src="assets/mindory_big.png">
+      <img id="big_logo" src="../../../assets/images/mindory_big.png">
   </span>
 </span>
