--- a/src/app/components/subscribe/subscribe.component.html
+++ b/src/app/components/subscribe/subscribe.component.html
@@ -54,6 +54,6 @@
 
     </form>
   <span id="big_logo_content">
-      <img id="big_logo" src="assets/mindory_big.png">
+      <img id="big_logo" src="../../../assets/images/mindory_big.png">
   </span>
 </span>
