--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,19 @@
 <app-header></app-header>
-<p>home works!</p>
+<div id="home-content">
+  <div id="home-first-content">
+     <span id="home-welcome-text">
+      <h1>Bienvenue sur Mindory</h1>
+      <span>
+        <p>Le meilleur site pour apprendre en s'amusant.
+        S'amuser est la meilleur façon d'apprendre et de retenir
+        </p>
+         <button class="home-button" mat-raised-button color="primary">Commencer à jouer</button>
+      </span>
+
+    </span>
+    <div id="card-content">
+      <img id="card_logo" src="../../../assets/images/Mindory_card.png">
+    </div>
+  </div>
+</div>
+
