--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,7 +1,7 @@
 #home-content {
   width: 100%;
   margin: auto;
-  height: 100%;
+  height: 70%;
 }
 
 #home-first-content {
@@ -11,6 +11,12 @@
   margin: 10% auto;
   height: 70%;
   justify-content: space-between;
+}
+
+#card-content {
+  display: flex;
+  justify-content: center;
+  width: 50%;
 }
 
 #card_logo {
