integratre visual for home page

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="footer-content">
+<footer class="footer-content">
   <span id="footer-lists-content">
       <div id="policy-content">
       <h3 class="footer-title-list">Policy</h3>
@@ -33,4 +33,4 @@
     <img class="social_icon" src="../../../assets/images/instagram.png">
   </div>
 
-</div>
+</footer>
