--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,6 +15,7 @@
       <img id="card_logo" src="../../../assets/images/Mindory_card.png">
     </div>
   </div>
+  <app-deck-example></app-deck-example>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
 
