--- a/src/app/components/deck-example/deck-example.component.css
+++ b/src/app/components/deck-example/deck-example.component.css
@@ -1,9 +1,62 @@
+#deck-example-title {
+  font-family: "Chewy", Arial,Helvetica, sans-serif;
+  text-align: center;
+}
+
 #deck-example-content {
   width: 70%;
-  margin: 5% 0;
+  margin: 10% auto;
+  height: 70%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+
+.deck-example-logo-content {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .deck-example-logo {
   max-width:100%;
   max-height:100%;
+}
+
+
+.deck-example-button {
+  margin-top: 10%;
+  font-family: "Chewy", Arial,Helvetica, sans-serif;
+  background: #F73C3B;
+  color: white;
+  width: auto;
+}
+
+@media screen and (max-width: 600px) {
+
+  .deck-example-logo-content {
+    margin: 5% 0;
+  }
+
+  .deck-example-logo-content {
+    width: 50%;
+  }
+
+  .deck-example-button {
+
+    width: 100%;
+  }
+
+  #deck-example-content {
+    width: 70%;
+    margin: 10% auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
