--- a/src/app/components/deck-example/deck-example.component.html
+++ b/src/app/components/deck-example/deck-example.component.html
@@ -1,5 +1,15 @@
+<h1 id="deck-example-title">Exemple de Decks</h1>
 <div id="deck-example-content">
-  <img class="deck-example-logo" src="../../../assets/images/html.png">
-  <img class="deck-example-logo" src="../../../assets/images/python.png">
-  <img class="deck-example-logo" src="../../../assets/images/logo-linux.png">
+  <div class="deck-example-logo-content">
+    <img class="deck-example-logo" src="../../../assets/images/html-5.png">
+    <button class="deck-example-button" mat-raised-button color="primary">Jouer au Deck HTML5</button>
+  </div>
+  <div class="deck-example-logo-content">
+    <img class="deck-example-logo" src="../../../assets/images/python.png">
+    <button class="deck-example-button" mat-raised-button color="primary">Jouer au Deck Python</button>
+  </div>
+  <div class="deck-example-logo-content">
+    <img class="deck-example-logo" src="../../../assets/images/logo-linux.png">
+    <button class="deck-example-button" mat-raised-button color="primary">Jouer au Deck Linux</button>
+  </div>
 </div>
