--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,15 +1,14 @@
 .footer-content{
   border-top: 4px solid #47525E;
-  position:absolute;
-  bottom: 30px;
-  left: 10%;
-  width: 80%;
   padding-top: 20px;
   height: 50px;
+  min-height:50px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding-bottom: 60px;
+  padding-bottom: 100px;
+  width: 80%;
+  margin: auto;
 }
 
 #footer-lists-content {
