--- a/src/app/components/banner-play/banner-play.component.html
+++ b/src/app/components/banner-play/banner-play.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="banner-play-timer">
       <h1>Temps</h1>
-      {{time |date:'HH:mm:ss':'UTC'}}
+      <h1>{{time |date:'HH:mm:ss':'UTC'}}</h1>
     </div>
   </div>
 </div>
