--- a/src/app/components/game-board/game-board.component.css
+++ b/src/app/components/game-board/game-board.component.css
@@ -8,9 +8,17 @@
 }
 
 .game-card-content {
-  background-color: #4572A0;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 5px;
+  perspective: 1000px;
+}
+
+
+app-card {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center;
 }
