--- a/src/app/components/game-board/game-board.component.html
+++ b/src/app/components/game-board/game-board.component.html
@@ -1,5 +1,5 @@
 <div class="game-board-content">
-  <div class="game-card-content" *ngFor="let card of cards">
+  <span class="game-card-content" *ngFor="let card of cards">
     <app-card [card]="card"></app-card>
-  </div>
+  </span>
 </div>
