--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,17 @@
-<div id="card-content">
-  {{card.image}}
-  {{card.text}}
+<div id="card-content" (click)="handleClick()" #elementClickable>
+  <span *ngIf="card.displayCard !== undefined && card.displayCard.display === true; else cardNotDisplay">
+    <span class="span-content-card div-content-front">
+      <div class="div-content-card" >
+        {{card.image}}
+          {{card.text}}
+      </div>
+    </span>
+  </span>
+  <ng-template #cardNotDisplay>
+    <span class="span-content-card div-content-back">
+      <div class="div-content-card" >
+        <img  class="deck-example-logo"  src="{{ 'http://localhost:3000/' + listDeckCardsService.deck.image}}">
+      </div>
+    </span>
+  </ng-template>
 </div>
