--- a/src/app/components/play-solo/play-solo.component.html
+++ b/src/app/components/play-solo/play-solo.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
-<app-banner-play [deck]="listDeckCardsService.deck"></app-banner-play>
+<app-banner-play [startGame]="startGame" [deck]="listDeckCardsService.deck"></app-banner-play>
 <app-game-board [cards]="listDeckCardsService.deck?.Cards"></app-game-board>
-<button (click)="refreshPage()">Recommencer</button>
-{{this.currentUrl}}
+<div id="solo-content-button">
+  <button mat-raised-button id="button_restart" (click)="refreshPage()">Recommencer</button>
+</div>
 <app-footer></app-footer>
