--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -4,10 +4,9 @@
   height: 100%;
   border-radius: 5px;
   background-color: #4572A0;
-  cursor: pointer;
-  transform: scale(1);
+  /*transform: scale(1);
   transform-style: preserve-3d;
-  transition: transform .5s;
+  transition: transform .5s;*/
 }
 
 #card-content:active {
@@ -16,8 +15,8 @@
 }
 
 #card-content.flip {
-  transform: rotateY(180deg);
-  transition: transform .5s;
+  /*transform: rotateY(180deg);
+  transition: transform .5s;*/
   cursor: default;
 }
 
@@ -42,6 +41,10 @@
   max-width: 100%;
   overflow: scroll;
   /*backface-visibility: hidden;*/
+}
+
+.div-content-back {
+  cursor: pointer;
 }
 
 
