--- a/src/app/components/banner-play/banner-play.component.html
+++ b/src/app/components/banner-play/banner-play.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="banner-play-timer">
       <h1>Temps</h1>
-      <h1>{{time |date:'HH:mm:ss':'UTC'}}</h1>
+      <h1>{{playSoloService.time |date:'HH:mm:ss':'UTC'}}</h1>
     </div>
   </div>
 </div>
