--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <span id="header_content">
   <img (click)="router.navigate(['/'])" id="image_logo" src="../../../assets/images/logo_seul.png">
   <span id="nav-bar-link-content">
-    <a>À propos</a>
+    <a (click)="router.navigate(['/about'])">À propos</a>
     <a>Jouer</a>
     <a>Admin</a>
 
