--- a/src/app/components/play-mode/play-mode.component.css
+++ b/src/app/components/play-mode/play-mode.component.css
@@ -2,7 +2,7 @@
   margin-top: 10vh;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
   height: 55vh;
 }
 
