--- a/src/app/components/play-mode/play-mode.component.css
+++ b/src/app/components/play-mode/play-mode.component.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: auto;
+}
+
 .card-container {
   margin-top: 10vh;
   display: flex;
@@ -9,5 +16,11 @@
 @media (max-width: 1600px) {
   .card-container {
     justify-content: center;
+  }
+}
+
+@media (max-width: 1050px) {
+  .card-container {
+    height: auto;
   }
 }
