--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <span id="header_content">
-  <img (click)="router.navigate(['/'])" id="image_logo" src="../../../assets/images/logo_seul.png">
+  <img (click)="router.navigate(['/'])" id="image_logo" src="../../../assets/images/logo_seul.png" alt="Logo">
   <span id="nav-bar-link-content">
     <a>À propos</a>
     <a>Jouer</a>
@@ -10,7 +10,7 @@
       <mat-icon class="account_icon" matSuffix>expand_more</mat-icon>
     </span>
     <ng-template #elseBlock>
-      <a class="header-sign" (click)="router.navigate(['/login'])">Connection</a>
+      <a class="header-sign" (click)="router.navigate(['/login'])">Connexion</a>
       <a class="header-sign" (click)="router.navigate(['/subscribe'])">Inscription</a>
     </ng-template>
   </span>
