add card-deck begin component

--- a/src/app/components/play-deck/play-deck.component.html
+++ b/src/app/components/play-deck/play-deck.component.html
@@ -1,1 +1,6 @@
-<p>play-deck works!</p>
+<app-header></app-header>
+<div class="card-container">
+  <app-card-choice ></app-card-choice>
+  <app-card-choice ></app-card-choice>
+</div>
+<app-footer></app-footer>
