--- a/src/app/components/card-deck/card-deck.component.html
+++ b/src/app/components/card-deck/card-deck.component.html
@@ -1,1 +1,6 @@
-<p>card-deck works!</p>
+<div class="card-deck-content">
+  <div class="deck-example-logo-content">
+    <img class="deck-example-logo" src="{{ 'http://localhost:3000/' + deck.image}}">
+    <button (click)="router.navigate(['/play/decks/'+deck.id])" class="deck-example-button" mat-raised-button color="primary">Jouer au Deck {{ deck.title}}</button>
+  </div>
+</div>
