--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,7 +7,7 @@
         <p>Le meilleur site pour apprendre en s'amusant.
         S'amuser est la meilleur façon d'apprendre et de retenir
         </p>
-         <button class="home-button" mat-raised-button color="primary">Commencer à jouer</button>
+         <button [routerLink]="'/play/mode'" class="home-button" mat-raised-button color="primary">Commencer à jouer</button>
       </span>
 
     </span>
