--- a/src/app/components/deck-example/deck-example.component.html
+++ b/src/app/components/deck-example/deck-example.component.html
@@ -3,6 +3,6 @@
 
   <div class="deck-example-logo-content" *ngFor="let deck of listDeckService.decksHome">
     <img class="deck-example-logo" src="{{ 'http://localhost:3000/' + deck.image}}">
-    <button (click)="router.navigate(['/play/decks/'+deck.id])" class="deck-example-button" mat-raised-button color="primary">Jouer au Deck {{ deck.title}}</button>
+    <button (click)="handleDeckClick(deck.id)" class="deck-example-button" mat-raised-button color="primary">Jouer au Deck {{ deck.title}}</button>
   </div>
 </div>
