--- a/src/app/components/play-mode/play-mode.component.html
+++ b/src/app/components/play-mode/play-mode.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 <div class="card-container">
-  <app-card-choice [text]="textFirstCard" [title]="titleFirstCard" [mode_icon]="modeSoloIcon" [urlPlay]="modeSoloURL"></app-card-choice>
-  <app-card-choice [text]="textSecondCard" [title]="titleSecondCard" [mode_icon]="modeTwoIcon" [urlPlay]="modeDuoURL"></app-card-choice>
+  <app-card-choice [text]="textFirstCard" [title]="titleFirstCard" [mode_icon]="modeSoloIcon" [urlPlay]="deckURL" [nameMode]="nameModeSolo"></app-card-choice>
+  <app-card-choice [text]="textSecondCard" [title]="titleSecondCard" [mode_icon]="modeTwoIcon" [urlPlay]="deckURL" [nameMode]="nameModeDuo"></app-card-choice>
 </div>
 <app-footer></app-footer>
