add more proper way to recup the value clicked

--- a/src/app/components/deck-example/deck-example.component.html
+++ b/src/app/components/deck-example/deck-example.component.html
@@ -1,4 +1,4 @@
-<h1 id="deck-example-title">Exemple de Decks</h1>
+<h1 id="deck-example-title">Jouer en mode Solo</h1>
 <div id="deck-example-content">
 
   <div class="deck-example-logo-content" *ngFor="let deck of listDeckService.decksHome">
