--- a/src/app/components/card-choice/card-choice.component.html
+++ b/src/app/components/card-choice/card-choice.component.html
@@ -5,5 +5,5 @@
       <h1 class="card__title">{{title}}</h1>
       <h2 class="card__text">{{text}}</h2>
     </div>
-    <p class="card__apply"><a (click)="handleModeClick()" id="link-content">Jouer<mat-icon matSuffix>arrow_forward</mat-icon></a></p>
+    <p class="card__apply"><a (click)="handleModeClick()" id="link-content">{{TextClickable !== undefined ? TextClickable: 'Jouer'}}<mat-icon matSuffix>arrow_forward</mat-icon></a></p>
   </div>
