add to the previous commit

--- a/src/app/components/create-part/create-part.component.html
+++ b/src/app/components/create-part/create-part.component.html
@@ -1,1 +1,10 @@
-<p>create-part works!</p>
+<app-header></app-header>
+<div class="create-part-content">
+  <h1>Vous avez créer une partie</h1>
+  <p class="create-part-content">
+    Vous pouvez choisir d'envoyez l'URL ci-dessous à l'autre personne ou de générer un mot de passe qu'elle pourra rentré
+    elle même dans la partie rejoindre partie
+  </p>
+  <h2>URL</h2>
+  <h2>Mot de passe custom</h2>
+</div>
