--- a/src/app/components/admin/decks-list/admin-decks-list.component.html
+++ b/src/app/components/admin/decks-list/admin-decks-list.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
 <div id="decks-list-container">
-  W.I.P.
+  <app-admin-decks-tab></app-admin-decks-tab>
 </div>
 <app-footer></app-footer>
