add some modification for guards token

--- a/src/app/components/card-duo/card-duo.component.html
+++ b/src/app/components/card-duo/card-duo.component.html
@@ -10,9 +10,8 @@
   <ng-template #cardNotDisplay>
     <span class="span-content-card div-content-back" (click)="handleClick()">
       <div class="div-content-card" >
-        <img  class="deck-example-logo"  src="{{ 'http://localhost:3000/' + listDeckCardsService.deck.image}}">
+        <img  class="deck-example-logo"  src="{{ 'http://localhost:3000/' + playDuoService.deck.image}}">
       </div>
     </span>
   </ng-template>
 </div>
-<p>card-duo works!</p>
