--- a/src/app/components/play-duo/play-duo.component.html
+++ b/src/app/components/play-duo/play-duo.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-<app-banner-play [deck]="listDeckCardsService.deck"></app-banner-play>
-<app-game-board [cards]="listDeckCardsService.deck?.Cards"></app-game-board>
+<app-banner-play [deck]="playDuoService.deck"></app-banner-play>
+<app-game-board-duo [cards]="playDuoService.part?.Cards"></app-game-board-duo>
 <div id="solo-content-button">
   <button mat-raised-button id="button_restart" (click)="refreshPage()">Recommencer</button>
 </div>
