--- a/src/app/components/admin/deck-tab/admin-decks-tab.component.html
+++ b/src/app/components/admin/deck-tab/admin-decks-tab.component.html
@@ -1,22 +1,23 @@
 <div id="decks-tab-container">
-  <table>
-    <thead>
-    <tr>
-      <th>ID</th>
-      <th>Nom</th>
-      <th>Créé par (W.I.P.)</th>
-      <th>Nombre de cartes</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-      <td>1</td>
-      <td>Python</td>
-      <td>RemyMach</td>
-      <td>30</td>
-      <td><a style="text-decoration: underline">Voir / Modifier le deck</a></td>
-      <td><a style="color: red; text-decoration: underline">Supprimer</a></td>
-    </tr>
-    </tbody>
-  </table>
+  <div class="grid-container">
+    <span class="grid-header">ID</span>
+    <span class="grid-header">Nom</span>
+    <span class="grid-header">Créé par</span>
+    <span class="grid-header">Nombre de cartes</span>
+    <span class="grid-header"></span>
+    <span class="grid-header"><a style="text-decoration: underline">Ajouter un deck</a></span>
+
+    <span>1</span>
+    <span>Python</span>
+    <span>W.I.P.</span>
+    <span>30</span>
+    <span><a style="text-decoration: underline">Voir / Modifier le deck</a></span>
+    <span><a style="color: red; text-decoration: underline">Supprimer</a></span>
+    <span>1</span>
+    <span>Python</span>
+    <span>W.I.P.</span>
+    <span>30</span>
+    <span><a style="text-decoration: underline">Voir / Modifier le deck</a></span>
+    <span><a style="color: red; text-decoration: underline">Supprimer</a></span>
+  </div>
 </div>
