Filled about page and edited style

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
-<h2>A propos de Mindory</h2>
-<p>Mindory est un projet visant a faciliter l'accès à l'éducation en proposant une nouvelle approche pedagogique.</p>
-<p>Nous proposons un jeu basé sur le concept du memory, le celebre jeu de carte dont le but est de retrouver les paires</p>
+<div id="about-content">
+  <h2 id="about-title">A propos de Mindory</h2>
+  <p>Mindory est un projet visant a faciliter l'accès à l'éducation en proposant une nouvelle approche pedagogique.</p>
+  <p>Nous proposons un jeu basé sur le concept du memory, le celebre jeu de carte dont le but est de retrouver les paires. Cependant, nous avons remplacé les cartes traditionnelles par des cartes à but pédagogique afin que nos utilisateurs retiennent des connaissances techniques.</p>
+  <p>Les jeux de cartes sont entièrement personnalisables et chacun peut créer son propre deck afin de s'entrainer avec les notions qu'il souhaite.</p>
+</div>
