Connect footer about text to about page

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -16,7 +16,7 @@
     <div id="mindory-content">
       <h3 class="footer-title-list">Mindory</h3>
       <span class="footer-list-content">
-        <p class="element-list">
+        <p class="element-list" (click)="router.navigate(['/about'])">
           À propos
         </p>
         <p class="element-list">
@@ -27,10 +27,10 @@
   </span>
 
   <div id="footer-social-network">
-    <img class="social_icon" src="../../../assets/images/facebook.png">
-    <img class="social_icon" src="../../../assets/images/twitter.png">
-    <img class="social_icon" src="../../../assets/images/linkedin.png">
-    <img class="social_icon" src="../../../assets/images/instagram.png">
+    <img class="social_icon" src="../../../assets/images/facebook.png" alt="facebook icon">
+    <img class="social_icon" src="../../../assets/images/twitter.png" alt="twitter icon">
+    <img class="social_icon" src="../../../assets/images/linkedin.png" alt="linkedin icon">
+    <img class="social_icon" src="../../../assets/images/instagram.png" alt="instagram icon">
   </div>
 
 </footer>
