Add footer to about page

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,3 +5,4 @@
   <p>Nous proposons un jeu basé sur le concept du memory, le celebre jeu de carte dont le but est de retrouver les paires. Cependant, nous avons remplacé les cartes traditionnelles par des cartes à but pédagogique afin que nos utilisateurs retiennent des connaissances techniques.</p>
   <p>Les jeux de cartes sont entièrement personnalisables et chacun peut créer son propre deck afin de s'entrainer avec les notions qu'il souhaite.</p>
 </div>
+<app-footer></app-footer>
