Add legal notice and connect page to the footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
       <div id="policy-content">
       <h3 class="footer-title-list">Policy</h3>
       <span class="footer-list-content">
-        <p class="element-list">
+        <p class="element-list" (click)="router.navigate(['/legal'])">
           Mentions légales
         </p>
         <p class="element-list">
