Add data usage page and connect page to the footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,7 +6,7 @@
         <p class="element-list" (click)="router.navigate(['/legal'])">
           Mentions légales
         </p>
-        <p class="element-list">
+        <p class="element-list" (click)="router.navigate(['/data'])">
           Politique d'utilisation des données
         </p>
 
