Add contact page and connect page to the footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -19,7 +19,7 @@
         <p class="element-list" (click)="router.navigate(['/about'])">
           À propos
         </p>
-        <p class="element-list">
+        <p class="element-list" (click)="router.navigate(['/contact'])">
           Nous contacter
         </p>
       </span>
