add random shuffle on client side of the data

--- a/src/app/components/banner-play-duo/banner-play-duo.component.html
+++ b/src/app/components/banner-play-duo/banner-play-duo.component.html
@@ -5,7 +5,7 @@
   </div>
   <div id="banner-time-logo">
     <div class="banner-play-timer">
-      <h1 *ngIf="socketService.socket.id && playDuoService.idUserWhoPlay; else elseBlock">
+      <h1 *ngIf="socketService.socket && playDuoService.idUserWhoPlay; else elseBlock">
         {{socketService.socket.id == playDuoService.idUserWhoPlay ? 'A vous de jouer': 'A votre adverssaire de jouer'}}
       </h1>
       <ng-template #elseBlock>
